# mpitofino

./: .gitignore  .gitmodules  LICENSE  README.md
evaluation/: bandwidth_comparison.py  bandwidth_multiple_ranks.py  latency_four_nodes.py  latency_osu.py  latency_vs_ranks.py  performance.md  pkt_overhead_plot.py
other_work/ib_checksum/: checksum.py  checksum_ack.py  packet.hex  packet_ack.hex
other_work/notes/: papers.md
projects/allreduce_poc/: CMakeLists.txt  README.md  run_ctrl.sh
projects/allreduce_poc/client/: test1.py  test2.py
projects/allreduce_poc/common/: epoll.cc  signalfd.h  simple_types.h  utils.cc  utils.h
projects/allreduce_poc/ctrl/: CMakeLists.txt  asic_driver.cc  asic_driver.h  bfrt_tools.h  main.cc
projects/allreduce_poc/p4/: README.md  allreduce_poc.p4  headers.p4  types.p4
projects/microbenchmarks/: .gitignore  CMakeLists.txt  README.md
projects/microbenchmarks/src/: CMakeLists.txt  mpi_coll_performance.c  test_mpi.c  utils.h
projects/mpitofino/: CMakeLists.txt  README.md  README.vm_setup.md  config.h.in  run_sd.sh  sd.example.conf
projects/mpitofino/client_lib/: CMakeLists.txt  README.md  example.cc  ib_utils.cc  ib_utils.h  mpitofino.cc  mpitofino.h  mpitofino_wrapper.cc
projects/mpitofino/client_lib/include/: mpitofino.h
projects/mpitofino/common/: client_utils.cc  client_utils.h  com_utils.h  dynamic_buffer.h  epoll.cc  epoll.h  packet_headers.h  profiler.cc  profiler.h  signalfd.cc  simple_types.cc  simple_types.h  timerfd.cc  timerfd.h  utils.cc  utils.h  visibility.h
projects/mpitofino/nd/: CMakeLists.txt  main.cc  node_daemon.cc  node_daemon.h
projects/mpitofino/p4/: README.md  collectives.p4  collectives_distributor.p4  headers.p4  mpitofino.p4  types.p4
projects/mpitofino/proto/: client_lib_nd.proto  common.proto  ctrl_sd.proto
projects/mpitofino/sd/: CMakeLists.txt  asic_driver.cc  asic_driver.h  bfrt_tools.h  distributed_control_plane_agent.cc  distributed_control_plane_agent.h  main.cc  packet_headers.h  packet_processor.cc  packet_processor.h  state_repository.cc  state_repository.h
projects/openmpi/: .gitignore  README.md
projects/openmpi/patches/: 0001-initial_version.patch
projects/tools/: enable_ports_stordis2.sh  model_portmap.json  show_port_status.sh
projects/tools/tap_loopback/: CMakeLists.txt  tap_loopback.cc
